--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhost:5000",
+  "proxy": "https://journal-hub-server.onrender.com",
   "name": "journal-frontend",
   "private": true,
   "version": "0.0.0",
